# sisukas

./: .gitignore  .stylelintrc.json  Dockerfile  Makefile  README.md  TODO.md  TODO.next.md  TODO.v1.md  config.json  curricula.yaml  docker-compose.yml  dragSelect.js  eslint.config.js  fly.toml  index.html  jest.config.js  loadCurricula.js  loader.js  major.yaml  minor.yaml  package-lock.json  package.json  script.js  styles.css  yamlLoader.js
.github/: FUNDING.yml
__mocks__/: yamlLoader.js
__tests__/: domUtils.test.js  filterHelpers.test.js  loader.test.js  script.test.js
backend/: .env.example  drizzle.config.cjs  drizzle.config.ts  package-lock.json  package.json  vitest.config.ts
config/: .htmlhintrc
course-browser/: .env.example  Dockerfile  LICENSE  compile-metadata.js  fly.dev.toml  index.html  package-lock.json  package.json  styles.css
coverage/: clover.xml  coverage-final.json  lcov.info
data/: periods.yaml
filter-api/: .gitignore  README.md  config.py  file_storage.py  main.py  requirements.txt
filters-api/: .env.example  README.md  main.py  requirements.txt
fuzzy-search/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
logs/: course_changes_20250606_200627.json  course_changes_20250609_062240.json  course_changes_20250610_062129.json  course_changes_20250611_062133.json  course_changes_20250611_100934.json  course_changes_20250612_062148.json  (+118 more)
sisu-wrapper/: .env.example  Procfile  README.md  main.py  pyproject.toml  requirements.in  requirements.txt
sisu-wrapper/api/: main.py  models.py
sisu-wrapper/api/core/: build_info.py  config.py
sisu-wrapper/api/routers/: courses.py  health.py  root.py
sisu-wrapper/api/utils/: responses.py
sisu-wrapper/sisu_wrapper/: __main__.py  aalto_api_client.py  client.py  exceptions.py  historical.py  historical_parsing.py  main.py  models.py  models_historical.py  models_resolve.py  orchestrator.py  service.py
(+393 files in other folders)
