[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sisu-wrapper"
version = "0.1.0"
authors = [
  { name="Ki Chun Tong", email="kichun.tong@aalto.fi" },
]
description = "A lightweight wrapper for the Aalto University Sisu API"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
